# QA_RAG_Classifier

./: .gitmodules  README.md  pyproject.toml
docs/: arch_spec.md  db_spec.md  design_spec.md  project_spec.md  ui_spec.md
docs/skills/consuming-domain-artifacts/: SKILL.md
src/: __init__.py  config.py  main.py
src/cli/: app.py
src/db/: candidate_repo.py  content_repo.py  domain_repo.py  embedding_repo.py  repo.py  review_repo.py  schema.py  similarity_repo.py  token_cache_repo.py  token_usage_repo.py
src/pipeline/: artifact.py  artifact_versioning.py  candidates.py  embedding.py  hash_utils.py  ingest.py  label_index.py  markdown_parser.py  merge.py  merge_persist.py  naming.py  representation.py  run.py  similarity.py  tokenization.py
src/ui/: app.py  state.py
tests/: test_artifact_bundle.py  test_artifact_versioning.py  test_candidate_domain_repo.py  test_candidates.py  test_content_repo.py  test_db_repo.py  test_db_schema.py  test_delete_pdf.py  test_embedding_repo.py  test_hash_utils.py  test_label_index.py  test_markdown_parser.py  test_merge.py  test_merge_persistence.py  test_naming.py  test_representation.py  test_review_repo.py  test_similarity_repo.py  test_token_cache_repo.py  test_token_usage_repo.py  test_tokenization.py  test_ui_state.py  test_ui_state_pdfs.py
